--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Fetch</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>XMLHttpRequest</title>
 </head>
 
 <body>
 
-    <h1>Fetch- Async-Await</h1>
+    <h1 class="title">XMLHttpRequest</h1>
+
+    <div id="container" class="container">
+
+
+    </div>
 
     <script src="js/script.js"></script>
 </body>
